--- a/prototyping/react-multi-step-form/package.json
+++ b/prototyping/react-multi-step-form/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "uuid": "^7.0.3"
+    "uuid": "^7.0.3",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
