--- a/prototyping/react-multi-step-form/package.json
+++ b/prototyping/react-multi-step-form/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-textarea-autosize": "^8.0.1",
     "uuid": "^7.0.3",
     "validator": "^13.0.0"
   },
