--- a/prototyping/react-multi-step-form/package.json
+++ b/prototyping/react-multi-step-form/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^1.11.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
