--- a/react-multi-step-form/public/manifest.json
+++ b/react-multi-step-form/public/manifest.json
@@ -1,14 +1,14 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Form Wizard",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
+      "src": "/android-chrome-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
